syntax = "proto3";

package atomix.counter.service;

import "atomix/metadata.proto";
import "atomix/primitive/service.proto";

option java_package = "io.atomix.core.counter.impl";
option java_outer_classname = "CounterProto";
option java_multiple_files = true;

// Atomic counter snapshot
message AtomicCounterSnapshot {
    int64 counter = 1;
}

message IncrementRequest {
    int64 delta = 1;
}

message IncrementResponse {
    atomix.metadata.Metadata metadata = 1;
    int64 previous_value = 2;
    int64 next_value = 3;
}

message DecrementRequest {
    int64 delta = 1;
}

message DecrementResponse {
    atomix.metadata.Metadata metadata = 1;
    int64 previous_value = 2;
    int64 next_value = 3;
}

message GetRequest {

}

message GetResponse {
    atomix.metadata.Metadata metadata = 1;
    int64 value = 2;
}

message SetRequest {
    int64 value = 1;
}

message SetResponse {
    atomix.metadata.Metadata metadata = 1;
    int64 previous_value = 2;
}

message CheckAndSetRequest {
    int64 expect = 1;
    int64 update = 2;
}

message CheckAndSetResponse {
    atomix.metadata.Metadata metadata = 1;
    bool succeeded = 2;
}

service CounterService {
    rpc Set(SetRequest) returns (SetResponse) {
        option (atomix.primitive.service.operation) = {
            name: "set"
            type: COMMAND
        };
    }

    rpc Get(GetRequest) returns (GetResponse) {
        option (atomix.primitive.service.operation) = {
            name: "get"
            type: QUERY
        };
    }

    rpc Increment(IncrementRequest) returns (IncrementResponse) {
        option (atomix.primitive.service.operation) = {
            name: "increment"
            type: COMMAND
        };
    }

    rpc Decrement(DecrementRequest) returns (DecrementResponse) {
        option (atomix.primitive.service.operation) = {
            name: "decrement"
            type: COMMAND
        };
    }

    rpc CheckAndSet(CheckAndSetRequest) returns (CheckAndSetResponse) {
        option(atomix.primitive.service.operation) = {
            name: "cas"
            type: COMMAND
        };
    }
}